--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.6.9",
     "@angular/animations": "~8.2.9",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
@@ -19,7 +20,10 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "@auth0/angular-jwt": "^3.0.0",
+    "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
+    "semantic-ui-css": "^2.4.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
